--- a/commercial-brand/package.json
+++ b/commercial-brand/package.json
@@ -13,8 +13,8 @@
         "autoprefixer": "^10.4.24",
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.0",
-        "lucide-react": "^0.344.0",
-        "next": "15.1.0",
+        "lucide-react": "^0.475.0",
+        "next": "latest",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^2.2.1"
