--- a/nside-template/package.json
+++ b/nside-template/package.json
@@ -12,8 +12,8 @@
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.0",
         "lenis": "^1.3.17",
-        "lucide-react": "^0.344.0",
-        "next": "15.1.0",
+        "lucide-react": "^0.475.0",
+        "next": "latest",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^2.2.1"
