--- a/pla-tone/package.json
+++ b/pla-tone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sneaker-shop",
+  "name": "pla-tone",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,8 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
-    "lucide-react": "^0.460.0",
-    "next": "15.1.0",
+    "lucide-react": "^0.475.0",
+    "next": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^2.6.0"
