--- a/pla-tone/package.json
+++ b/pla-tone/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.475.0",
     "next": "^16.1.6",
     "react": "19.0.0",
