--- a/pla-tone/package.json
+++ b/pla-tone/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3004",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3004",
     "lint": "next lint"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "^3.76.1",
+    "@payloadcms/next": "^3.76.1",
+    "@payloadcms/richtext-lexical": "^3.76.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lenis": "^1.3.17",
     "lucide-react": "^0.475.0",
     "next": "^16.1.6",
+    "payload": "^3.76.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwind-merge": "^2.6.0"
