--- a/commercial-brand/package.json
+++ b/commercial-brand/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "commercial-brand",
+    "name": "design-portfolio",
     "version": "0.1.0",
     "private": true,
     "scripts": {
