--- a/design studio/package.json
+++ b/design studio/package.json
@@ -1,18 +1,17 @@
 {
-    "name": "design-portfolio",
+    "name": "design-studio",
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev -p 3004",
+        "dev": "next dev -p 3003",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
-        "@tailwindcss/postcss": "^4.1.18",
-        "autoprefixer": "^10.4.24",
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.0",
+        "lenis": "^1.3.17",
         "lucide-react": "^0.475.0",
         "next": "^16.1.6",
         "react": "^19.0.0",
@@ -20,9 +19,11 @@
         "tailwind-merge": "^2.2.1"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.18",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "autoprefixer": "^10.4.24",
         "postcss": "^8",
         "tailwindcss": "^4.0.0",
         "typescript": "^5"
