--- a/design portfolio/package.json
+++ b/design portfolio/package.json
@@ -13,6 +13,7 @@
         "autoprefixer": "^10.4.24",
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.0",
+        "graphql": "^16.12.0",
         "lucide-react": "^0.475.0",
         "next": "^15.1.6",
         "react": "^19.0.0",
