--- a/design studio/package.json
+++ b/design studio/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.0",
+        "graphql": "^16.12.0",
         "lenis": "^1.3.17",
         "lucide-react": "^0.475.0",
         "next": "^16.1.6",
